layout shift fix

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,6 @@
-/* // styles apply to body element */
 html {
   height: 100vh;
+  width: 100vw;
 }
 
 body {
